--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon bin/www",
-    "start": "node bin/www",
+    "dev": "nodemon api/bin/www",
+    "start": "node api/bin/www",
     "build": "npm install && npm install --prefix client && npm run build --prefix client"
   },
   "dependencies": {
