fixed bugs with auth

--- a/client/.env
+++ b/client/.env
@@ -1,1 +1,8 @@
 VITE_API_URL=https://form-submission-with-admin-approval.onrender.com
+VITE_FIREBASE_API_KEY= AIzaSyCMPC0bjoCZD3VJk-w1Sxhe5H4ScXJz4lY
+VITE_FIREBASE_AUTH_DOMAIN= form-submission-f90a4.VITE_firebaseapp.com
+VITE_FIREBASE_PROJECT_ID= form-submission-f90a4
+VITE_FIREBASE_STORAGE_BUCKET= form-submission-f90a4.appspot.com
+VITE_FIREBASE_MESSAGING_SENDER_ID= 453997507914
+VITE_FIREBASE_APP_ID=1:453997507914:web:3bd4724677e1da3db83db3
+measurementId: G-RVYLHZGHCY
